<resources>
    <string name="app_name">StarWorld</string>
    <string name="action_notifications">Notification</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="btn_connect_text">connect</string>
    <string name="get_ip_text">Please enter server IP</string>
    <string name="action_register">Register</string>
    <string name="title_activity_find_friend">FindFriendActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_follow_list">followListActivity</string>
    <string name="title_activity_notification">notificationActivity</string>
    <string name="title_activity_likes">LikesActivity</string>
</resources>
